--- a/app/NovaWeb/src/modules/shared/widgets/bp-goto/bp-goto.scss
+++ b/app/NovaWeb/src/modules/shared/widgets/bp-goto/bp-goto.scss
@@ -84,9 +84,10 @@
         display: block;
         font-size: $font-size-smaller;
         font-weight: $font-weight-normal;
-        line-height: .9rem;
+        line-height: .9;
         margin: 2px 0 0;
         max-width: 100%;
+        min-height: 20px;
         padding: 0 2px;
     }
 
@@ -97,6 +98,7 @@
     &__button-icon {
         display: inline-block;
         margin: 5px 0 0;
+        min-height: 23px;
         padding: 0;
         transition: all .3s ease-out;
     }
